Fixed horizontal scrolling bug in Header. First child was partially chopped off.

--- a/src/styles/components/Header.less
+++ b/src/styles/components/Header.less
@@ -3,10 +3,7 @@
     width: 100%;
     height: 50px;
     border-bottom: 1px solid;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    align-content: center;
     padding: 0px 15px;
     overflow-x: scroll;
     overflow-y: hidden;
@@ -23,6 +20,14 @@
         &.active {
             font-weight: bold;
             text-decoration: underline;
+        }
+
+        &:first {
+            margin-left: auto;
+        }
+        
+        &:last {
+            margin-right: auto;
         }
     }
 }
